# dmg-osd

./: .gitignore  BUILD.md  README.md  build.sh  dmg-osd.config.example  flake.nix  meson.build
.cursor/rules/: dmg-osd.mdc
src/: application.vala  battery_monitor.vala  config.vala  main.vala  overlay_window.vala  settings_window.vala  system_tray.vala
